Add basic structure to html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Tic Tac Toe</h1>
+    <div id="message"></div>
+    <div id="board" class="board"></div>
+    <button id="restartBtn">Restart Game</button>
+
     <script src="script.js"></script>
   </body>
 </html>
